--- a/style.css
+++ b/style.css
@@ -186,7 +186,7 @@ input[type="text"]:focus {
   cursor: pointer;
 }
 
-#menuToggle input {
+#menuToggle input:checked ~ #menu {
   display: block;
   width: 30px;
   height: 30px;
