--- a/style.css
+++ b/style.css
@@ -186,18 +186,6 @@ input[type="text"]:focus {
   cursor: pointer;
 }
 
-#menuToggle input:checked ~ #menu {
-  display: block;
-  width: 30px;
-  height: 30px;
-  position: absolute;
-  top: -5px;
-  left: -5px;
-  cursor: pointer;
-  opacity: 0;
-  z-index: 20;
-}
-
 #menuToggle span {
   display: block;
   width: 30px;
@@ -223,6 +211,10 @@ input[type="text"]:focus {
   transform: rotate(-45deg);
   top: -7px;
   position: relative;
+}
+
+#menuToggle input:checked ~ #menu {
+  transform: translateX(0);
 }
 
 /* Menu vero e proprio */
