--- a/style.css
+++ b/style.css
@@ -186,7 +186,24 @@ input[type="text"]:focus {
   cursor: pointer;
 }
 
-#menuToggle span {
+/* Nascondi checkbox */
+#menuToggle input[type="checkbox"] {
+  display: none;
+}
+
+/* Label contiene le 3 linee */
+#menuToggle label {
+  display: block;
+  width: 30px;
+  height: 25px;
+  cursor: pointer;
+  user-select: none;
+  position: relative;
+  z-index: 1001;
+}
+
+/* Le 3 linee */
+#menuToggle label span {
   display: block;
   width: 30px;
   height: 4px;
@@ -199,22 +216,18 @@ input[type="text"]:focus {
 }
 
 /* Animazioni hamburger aperto */
-#menuToggle input:checked ~ span:nth-child(1) {
+#menuToggle input:checked + label span:nth-child(1) {
   transform: rotate(45deg);
   top: 7px;
   position: relative;
 }
-#menuToggle input:checked ~ span:nth-child(2) {
+#menuToggle input:checked + label span:nth-child(2) {
   opacity: 0;
 }
-#menuToggle input:checked ~ span:nth-child(3) {
+#menuToggle input:checked + label span:nth-child(3) {
   transform: rotate(-45deg);
   top: -7px;
   position: relative;
-}
-
-#menuToggle input:checked ~ #menu {
-  transform: translateX(0);
 }
 
 /* Menu vero e proprio */
@@ -312,7 +325,7 @@ input[type="text"]:focus {
     width: 25px;
     height: 22px;
   }
-  #menuToggle span {
+  #menuToggle label span {
     height: 3px;
   }
   #menu {
@@ -320,5 +333,4 @@ input[type="text"]:focus {
   }
   #endGame {
     width: 95%;
-   }
-}
+  }
